# climate-driven-energy-demand-analytics-system

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  DESIGN.md  GEMINI.md  LICENSE  README.md
Code/energy_prediction_system/: .dockerignore  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test.db  test_integration.db  test_ui_integration.db
Code/energy_prediction_system/data/processed/: dados_finais_completos.csv
Code/energy_prediction_system/models/daily/: LR_v1.joblib  LR_v2.joblib  LR_v3.joblib  LR_v4.joblib
Code/energy_prediction_system/models/feat-engineering/: pca.joblib  pca_daily.joblib  pca_features_daily.joblib  pca_features_hourly.joblib  pca_hourly.joblib  scaler.joblib  scaler_daily.joblib  scaler_hourly.joblib  selected_features.joblib  selected_features_daily.joblib  selected_features_hourly.joblib
Code/energy_prediction_system/models/hourly/: LR_v1.joblib  LR_v2.joblib  LR_v4.joblib  LR_v5.joblib  LR_v6.joblib
Code/energy_prediction_system/src/: __init__.py  cleaning.py  gdrive_sync.py  ingestion.py
Code/energy_prediction_system/src/api/: Dockerfile  __init__.py  main.py
Code/energy_prediction_system/src/api/core/: config.py  security.py
Code/energy_prediction_system/src/api/database/: session.py
Code/energy_prediction_system/src/api/models/: model.py  user.py
Code/energy_prediction_system/src/api/routers/: router.py
Code/energy_prediction_system/src/api/schemas/: model.py  prediction.py  simulation.py  user.py
Code/energy_prediction_system/src/api/services/: auth.py  inference_engine.py  model_service.py  prediction_service.py  simulation_service.py
Code/energy_prediction_system/src/app/: Dockerfile  __init__.py  frontend_main_check.py  main.py  test_user_main.py
Code/energy_prediction_system/src/app/client/: api_client.py  auth_service.py  models_service.py  prediction_service.py  simulation_service.py
Code/energy_prediction_system/src/app/manager/: session_manager.py
Code/energy_prediction_system/src/app/ui/: main_window.py
Code/energy_prediction_system/src/app/utils/: validators.py
Code/energy_prediction_system/src/data-pipeline/: Dockerfile  feature_engineering.py
Code/energy_prediction_system/src/data_pipeline/: Dockerfile  __init__.py  cleaning.py  feature_engineering.py  gdrive_sync.py  ingestion.py  modeling.py  real_time_pipeline.py  realtime_checker.py  requirements-data_pipeline.txt  run_pipeline.sh  test_realtime_prediction.py
Code/energy_prediction_system/src/databases/: docker-compose.db.yml
Code/energy_prediction_system/src/databases/elk/: logstash.conf
Code/energy_prediction_system/src/databases/init-scripts/: 01-create-tables.sql  02-insert-data.sh  02-insert-data.sql
Code/energy_prediction_system/tests/integration/: test_inference_prediction.py  test_ingestion_cleaning.py  test_ingestion_cleaning_feat-eng.py  test_pipeline.py
Code/energy_prediction_system/tests/integration/app/: test_auth_backend_frontend.py  test_e2e_full_stack.py  test_inference_prediction.py  test_ui_integration.py  teste_frontend_scenario_simulation.py
Code/energy_prediction_system/tests/integration/data_pipeline/: test_auth_backend_frontend.py  test_ingestion_cleaning.py  test_ingestion_cleaning_feat-eng.py  test_ingestion_direct.py  test_pipeline.py  test_realtime_pipeline_integration.py
Code/energy_prediction_system/tests/unit/: test_cleaning.py  test_feature_engineering.py  test_ingestion.py  test_modeling.py
Code/energy_prediction_system/tests/unit/api/: conftest.py  test_backend_scenario.py  test_health_and_docs.py  (+3 more)
(+109 files in other folders)
