[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "energy-prediction-system"
version = "0.1.0"
description = "Climate-Driven Energy Demand Analytics System for Spain"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Data Processing & ML
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.2.0",
    "joblib>=1.3.0",
    "optuna>=3.1.0",
    # "matplotlib>=3.7.0",
    # "seaborn>=0.12.0",
    # "plotly>=5.13.0",

    # API & Sync
    "cdsapi>=0.6.1",
    "entsoe-py>=0.5.10",
    "python-dotenv>=1.0.0",
    "google-api-python-client>=2.80.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=1.0.0",

    # Backend & Security (Planned)
    "fastapi>=0.95.0",
    "uvicorn>=0.21.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.5",
    "bcrypt>=4.0.1",
    "pyjwt>=2.6.0",
    "pydantic-settings>=2.0.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",

    # UI (Planned)
    # "PyQt6>=6.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.0.0",
    "ruff==0.3.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "ignore:pkg_resources is deprecated as an API:DeprecationWarning"
]

[tool.ruff]
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit (Security)
]
ignore = [
    "B008", # Do not perform function call `Depends` in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106"]
"src/api/main.py" = ["S104"]

[tool.ruff.lint.mccabe]
max-complexity = 15
